--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2637,9 +2637,9 @@
 					left: 0;
 					width: 100%;
 					height: 100%;
-					opacity: 0.5;
+					opacity: 0.0;
 					z-index: 1;
-					opacity: 0.5;
+					opacity: 0.0;
 				}
 
 				.tiles article > .image:after {
@@ -2662,7 +2662,7 @@
 					background-position: center;
 					background-repeat: no-repeat;
 					background-size: 100% 100%;
-					opacity: 0.5;
+					opacity: 0.0;
 					z-index: 2;
 				}
 
@@ -2695,7 +2695,7 @@
 				padding: 1em;
 				border-radius: 4px;
 				border-bottom: 0;
-				color: #ffffff;
+				color: #333333;
 				text-align: center;
 				text-decoration: none;
 				z-index: 3;
@@ -2706,7 +2706,7 @@
 				}
 
 				.tiles article > a:hover {
-					color: #ffffff !important;
+					color: #333333 !important;
 				}
 
 				.tiles article > a h2 {
@@ -2722,7 +2722,7 @@
 					max-height: 0;
 					line-height: 1.5;
 					margin-top: 0.35em;
-					opacity: 0.5;
+					opacity: 0.0;
 				}
 
 					.tiles article > a .content > :last-child {
@@ -2762,16 +2762,16 @@
 
 				body:not(.is-touch) .tiles article:hover > .image:before {
 					background-color: #333333;
-					opacity: 0.5;
+					opacity: 0.0;
 				}
 
 				body:not(.is-touch) .tiles article:hover > .image:after {
-					opacity: 0.5;
+					opacity: 0.0;
 				}
 
 			body:not(.is-touch) .tiles article:hover .content {
 				max-height: 15em;
-				opacity: 0.5;
+				opacity: 0.0;
 			}
 
 		* + .tiles {
